Opened 13 years ago
Closed 13 years ago
#8300 closed bug (fixed)
CannaIM display problem
Reported by: | mt | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Input Methods | Version: | R1/Development |
Keywords: | CannaIM canna | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
CannaIM seems that it can't display conversion candidate in KouhoWindow. This patch may fix problem.
- To display conversion candidate in KouhoWindow, we need change skipping index bytes. In CannaInterface::GenerateKouhoString(), we have skipped 2 bytes as index before conversion candidate, but index is UTF8 FULL WIDTH NUMBERS, so we need skip 3 bytes.
- To show highlightRect correctly, change Invalidate(highlightRect) to Invalidate() in KouhoView::HighlightLine().
- Change BeOS's Haru font to VL PGothic (CannaLooper::ReadSettings() and KouhoWindow::KouhoWindow() ).
Attachments (2)
Change History (4)
by , 13 years ago
Attachment: | screenshot1.png added |
---|
by , 13 years ago
Attachment: | cannaim.patch added |
---|
comment:1 by , 13 years ago
patch: | 0 → 1 |
---|
comment:2 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Committed in hrev43750. Thanks a lot!
Note:
See TracTickets
for help on using tickets.
While inputing japanese text with Canna, KouhoWindow can't display conversion candidate.