CannaIM: can't display conversion candidate in KouhoWindow (#8300).

* To display conversion candidate in KouhoWindow, we need to change skipping
  index bytes. In CannaInterface::GenerateKouhoString(), we have skipped
  2 bytes as index before conversion candidate, but index is UTF8 FULL
  WIDTH NUMBERS, so we need to skip 3 bytes.
* To show highlightRect correctly, change Invalidate(highlightRect) to
  Invalidate() in KouhoView::HighlightLine().
* Change BeOS's Haru font to VL PGothic (CannaLooper::ReadSettings()
  and KouhoWindow::KouhoWindow()).