src/add-ons/input_server/methods/canna/CannaLooper.cpp
@@ -109,8 +109,8 @@ CannaLooper::ReadSettings(char* basePath)
 
 	font_family family;
 	font_style style;
-	strcpy(family, "Haru");
-	strcpy(style, "Regular");
+	strcpy(family, "VL PGothic");
+	strcpy(style, "regular");
 
 	fKouhoFont.SetFamilyAndStyle(family, style);
 	fKouhoFont.SetSize(12);
